--- a/src/modules/pages/shopkeepers/Shopkeepers.module.scss
+++ b/src/modules/pages/shopkeepers/Shopkeepers.module.scss
@@ -22,7 +22,7 @@
   }
 }
 
-.main_shopkeepers_block {
+.shopkeepers {
   width: 100%;
   height: auto;
   display: flex;
@@ -30,7 +30,7 @@
   flex-direction: column;
   padding: 0 16px;
 
-  .title_shop_block {
+  .title {
     width: 100%;
     height: 36px;
     line-height: 36px;
@@ -43,22 +43,7 @@
     font-family: $fontCustom2;
   }
 
-  .WWW {
-    display: none;
-  }
-
-  .data_none {
-    width: 100%;
-    text-align: center;
-    padding: 0 20px;
-    font-size: 24px;
-    font-weight: 400;
-    font-family: $fontCustom2;
-    color: $color-3;
-    margin: 16% auto 0 auto;
-  }
-
-  .center_block {
+  .content {
     width: 100%;
     max-width: 1600px;
     height: auto;
@@ -72,7 +57,7 @@
     border-radius: 5px;
     padding: 8px;
 
-    .shop_list_wrapper {
+    .list {
       display: flex;
       flex-direction: column;
       width: auto;
@@ -81,79 +66,49 @@
       position: sticky;
       top: 75px;
 
-      .shop_list_box {
+      .ul_names {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         width: 300px;
-        height: auto;
+        height: 100%;
         max-height: 80vh;
         min-height: auto;
         border: 1px solid $site-color-5;
         border-radius: 6px;
         background: $site-color-12;
-        transition: height 0.35s ease;
+        padding: 8px 4px;
+        overflow: auto;
 
-        .search_shop {
-          width: 100%;
-          height: 32px;
-          min-height: 32px;
-          max-height: 32px;
-          outline: none;
-          background: $site-color-12;
-          border: none;
-          border-radius: 6px 6px 0 0;
-          transition: all 0.25s ease-in-out;
-          color: $site-color-8;
-          padding-left: 10px;
-          padding-right: 10px;
-
-          &:hover,
-          &:focus,
-          &:active {
-            outline: none;
-            background: $site-color-1;
-          }
+        &::-webkit-scrollbar {
+          width: 4px !important;
         }
 
-        .ul_block {
+        .one {
           display: flex;
-          flex-direction: column;
+          flex-direction: row;
           width: 100%;
           height: auto;
-          padding: 8px 4px;
-          overflow: auto;
-          border-top: 1px solid $site-color-5;
 
-          &::-webkit-scrollbar {
-            width: 4px !important;
+          .link {
+            color: $site-color-2;
+            font-family: $fontCustom2;
+            font-size: 14px;
+            height: 28px;
+            line-height: 28px;
+            width: 100%;
+            padding: 0 8px;
+            transition: all 0.35s ease;
+            border-radius: 4px;
+
+            &:hover {
+              background: $site-color-1;
+              color: $site-color-8;
+            }
           }
 
-          .one_shop_list_line {
-            display: flex;
-            flex-direction: row;
-            width: 100%;
-            height: auto;
-
-            .one_line {
-              color: $site-color-2;
-              font-family: $fontCustom2;
-              font-size: 14px;
-              height: 28px;
-              line-height: 28px;
-              width: 100%;
-              padding: 0 8px;
-              transition: all 0.35s ease;
-              border-radius: 4px;
-
-              &:hover {
-                background: $site-color-1;
-              }
-            }
-
-            .active {
-              color: $site-color-9 !important;
-            }
+          .active {
+            color: $site-color-9 !important;
           }
         }
       }
@@ -165,24 +120,23 @@
       }
     }
 
-    .shop_all_suggestions {
+    .offers {
       display: flex;
       justify-content: flex-start;
       flex-direction: column;
       align-items: center;
       width: 100%;
-      max-width: 35%;
       height: auto;
       margin: 0 auto;
       padding: 8px 16px;
 
-      .one_offers_shop {
+      .single_offers {
         display: flex;
         flex-direction: column;
         width: 100%;
         position: relative;
 
-        .block_shop {
+        .name_fixed {
           font-family: $fontCustom2;
           font-weight: 400;
           font-size: 16px;
@@ -197,7 +151,7 @@
           z-index: 1;
         }
 
-        .on_click {
+        .actions {
           width: auto;
           height: auto;
           cursor: pointer;
@@ -206,7 +160,7 @@
       }
     }
 
-    .shopOneSuggestions {
+    .villages_and_preview {
       display: flex;
       justify-content: flex-start;
       flex-direction: column;
@@ -223,7 +177,7 @@
       position: sticky;
       top: 75px;
 
-      .searchInputItems {
+      .search_items {
         display: flex;
         width: 100%;
         height: 36px;
@@ -246,15 +200,7 @@
         }
       }
 
-      .animationMini {
-        animation: animation_visible_mini 1s ease-in;
-      }
-
-      .animationFull {
-        animation: animation_visible_full 1s ease-in;
-      }
-
-      .villagerShopInfo {
+      .villager_info {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -269,51 +215,12 @@
 }
 
 @media screen and (max-width: 1600px) {
-  .main_shopkeepers_block {
-    .center_block {
-      .shop_list_wrapper {
-        .shop_list_box {
-          width: 220px;
-        }
-      }
-    }
-  }
 }
 
 @media screen and (max-width: 1400px) {
-  .main_shopkeepers_block {
-    .center_block {
-      .shop_all_suggestions {
-        padding: 8px;
-        max-width: 32%;
-      }
-    }
-  }
 }
 
 @media screen and (max-width: 1280px) {
-  .main_shopkeepers_block {
-    .title_shop_block {
-      display: none;
-    }
-
-    .WWW {
-      display: flex;
-      font-size: 24px;
-      font-weight: 400;
-      font-family: $fontCustom2;
-      text-align: center;
-      width: auto;
-      margin: 19% auto;
-      padding: 0 24px;
-      color: $site-color-2;
-      line-height: 1.45;
-    }
-
-    .center_block {
-      display: none;
-    }
-  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -326,12 +233,6 @@
 }
 
 @media screen and (max-width: 640px) {
-  .main_shopkeepers_block {
-    .WWW {
-      margin: 45% auto;
-      font-size: 20px;
-    }
-  }
 }
 
 @media screen and (max-width: 480px) {
