Новый заголовок для страниц Title.js & Title.module.scss, замена на некоторых страницах на этот компонент. Исправления страницы Maps.js & Maps.module.scss (удаление/переименование Maps.scss), перестановка в Statistic.js. Новый компонент Link.js & Link.module.scss, а так же замена на некоторых только страницах. Исправления кнопки в Image-slider.js & Image-slider.module.scss, для коректного отображения. Упрощение компоненты Button.js. Испрвление TextEditor.js & TextEditor.module.scss, упрощена проверка на первоначальное значение, а так же добавлены mentions. Перелопачивание для Faq-editor.js (корректно не работает). И другое...

--- a/src/modules/components/image-slider/Image-slider.module.scss
+++ b/src/modules/components/image-slider/Image-slider.module.scss
@@ -58,6 +58,17 @@
         }
       }
     }
+
+    &:disabled {
+      cursor: default;
+      background: transparent;
+
+      svg {
+        path {
+          stroke: $site-color-5;
+        }
+      }
+    }
   }
 
   .right_full {
