--- a/src/modules/components/[0_grouped_0]-Manager/Donate-status/Donate-status-editor.module.scss
+++ b/src/modules/components/[0_grouped_0]-Manager/Donate-status/Donate-status-editor.module.scss
@@ -1,1 +1,41 @@
 @import "../../../../Variables.scss";
+
+.donate_status {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100%;
+  height: auto;
+  background: $site-color-4;
+  border: 1px solid $site-color-5;
+  border-radius: 6px;
+  padding: 16px;
+
+  .name {
+    display: flex;
+    width: 100%;
+    height: 40px;
+    margin: 5px auto;
+    line-height: 40px;
+    outline: none;
+    background: $site-color-12;
+    border: 0.5px solid $color-22;
+    border-radius: 5px;
+    transition: all 0.25s ease-in-out;
+    color: $site-color-8;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    &:hover,
+    &:focus,
+    &:active {
+      outline: none;
+      background: $site-color-1;
+    }
+  }
+
+  .action_wrapper {
+    width: auto;
+    margin: 16px auto 0 auto;
+  }
+}
