--- a/src/modules/components/text-editor/TextEditor.module.scss
+++ b/src/modules/components/text-editor/TextEditor.module.scss
@@ -12,6 +12,8 @@
   justify-content: space-between;
   padding: 4px;
   border-bottom: 1px solid $site-color-5;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
   position: sticky;
   top: 0;
   background: $site-color-14;
@@ -26,6 +28,8 @@
     bottom: 0;
     z-index: -1;
     background: $site-color-12;
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
   }
 
   .block {
@@ -122,6 +126,41 @@
   height: 0;
   z-index: 2;
   width: 80%;
+}
+
+.portal {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background: $color-22;
+  padding: 2px 4px;
+  border-radius: 4px;
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+
+  .line {
+    width: auto;
+    height: auto;
+    font-size: 12.5px;
+    font-weight: 400;
+    font-family: $fontCustom2;
+    margin: 2px 0;
+    padding: 6px;
+    border-radius: 4px;
+    transition: all 0.35s ease;
+    background: $site-color-12;
+    color: $site-color-2;
+    cursor: pointer;
+
+    &:hover {
+      background: $site-color-1;
+    }
+  }
+
+  .active {
+    color: $site-color-9;
+  }
 }
 
 body {
