--- a/src/modules/components/text-editor/functions/Prepare.scss
+++ b/src/modules/components/text-editor/functions/Prepare.scss
@@ -1,5 +1,9 @@
 @import "../../../../Variables";
 
+.minecraft_font {
+  font-family: $fontCustom2;
+}
+
 .left_editor {
   text-align: left;
 }
@@ -21,6 +25,7 @@
   margin-top: 1em;
   margin-bottom: 1em;
   text-indent: 2em !important;
+  line-height: 1.35;
 }
 
 .h1_editor {
@@ -74,6 +79,10 @@
   margin-bottom: 2.33em;
   font-weight: bold;
   font-family: inherit;
+}
+
+.mentions {
+  color: $site-color-9;
 }
 
 .code_editor {
