--- a/src/modules/pages/manager/Manager.module.scss
+++ b/src/modules/pages/manager/Manager.module.scss
@@ -53,7 +53,7 @@
     width: 100%;
     max-width: 1800px;
     height: auto;
-    margin: 8px auto 0 auto;
+    margin: 8px auto 16px auto;
     padding: 0;
   }
 }
