--- a/src/modules/pages/statistic/Statistic.module.scss
+++ b/src/modules/pages/statistic/Statistic.module.scss
@@ -9,17 +9,13 @@
   .statistic {
     width: 100%;
     max-width: 1410px;
-    height: 1020px;
+    height: auto;
     display: flex;
     flex-direction: column;
-    margin: 0 auto 48px auto;
+    margin: 0 auto 32px auto;
 
-    .title {
-      font-size: 32px;
-      font-weight: 400;
-      color: $color-3;
-      margin: 25px auto;
-      font-family: $fontCustom2;
+    .wrapper {
+      height: 948px;
     }
   }
 }
@@ -31,7 +27,7 @@
   .mainStatistic {
     .statistic {
       width: auto;
-      margin: 0 48px 48px 48px;
+      margin: 0 48px 32px 48px;
     }
   }
 }
@@ -39,7 +35,7 @@
 @media screen and (max-width: 1280px) {
   .mainStatistic {
     .statistic {
-      margin: 0 44px 48px 44px;
+      margin: 0 44px 32px 44px;
     }
   }
 }
@@ -47,29 +43,18 @@
 @media screen and (max-width: 1024px) {
   .mainStatistic {
     .statistic {
-      margin: 0 40px 48px 40px;
+      margin: 0 40px 32px 40px;
     }
   }
 }
 
 @media screen and (max-width: 960px) {
-  .mainStatistic {
-    .statistic {
-      .title {
-        font-size: 28px;
-      }
-    }
-  }
 }
 
 @media screen and (max-width: 768px) {
   .mainStatistic {
     .statistic {
       margin: 0 18px 24px 18px;
-
-      .title {
-        font-size: 26px;
-      }
     }
   }
 }
@@ -78,10 +63,6 @@
   .mainStatistic {
     .statistic {
       margin: 0 16px 16px 16px;
-
-      .title {
-        font-size: 22px;
-      }
     }
   }
 }
@@ -90,10 +71,6 @@
   .mainStatistic {
     .statistic {
       margin: 0 12px 12px 12px;
-
-      .title {
-        font-size: 18px;
-      }
     }
   }
 }
@@ -102,11 +79,6 @@
   .mainStatistic {
     .statistic {
       margin: 0 8px 8px 8px;
-
-      .title {
-        font-size: 16px;
-        text-align: center;
-      }
     }
   }
 }
