--- a/src/common/confirm-modal/ConfirmModal.module.scss
+++ b/src/common/confirm-modal/ConfirmModal.module.scss
@@ -28,6 +28,7 @@ body {
       display: flex;
       flex-direction: column;
       justify-content: space-around;
+      position: relative;
       width: 100%;
       height: 100%;
 
@@ -47,6 +48,13 @@ body {
         justify-content: space-around;
         width: 100%;
         height: auto;
+      }
+
+      .timeline {
+        height: 3px;
+        display: flex;
+        position: absolute;
+        bottom: 0;
       }
     }
   }
