--- a/src/modules/components/text-editor/TextEditor.module.scss
+++ b/src/modules/components/text-editor/TextEditor.module.scss
@@ -132,9 +132,10 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  background: $color-22;
+  background: $site-color-4;
   padding: 2px 4px;
   border-radius: 4px;
+  border: 1px solid $site-color-5;
   position: absolute;
   top: -9999px;
   left: -9999px;
