--- a/src/modules/components/[0_grouped_0]-Profile/cab-search/CabSearch.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/cab-search/CabSearch.module.scss
@@ -1,45 +1,25 @@
 @import "../../../../Variables";
 
-.boxSearchWrapper {
+.search_wrapper {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   width: 100%;
   height: auto;
 
-  .searchInput {
-    display: flex;
-    width: 225px;
-    height: 36px;
-    outline: none;
-    background: $site-color-12;
-    border: 1px solid $site-color-5;
-    border-radius: 5px;
-    transition: all 0.35s ease-in-out;
-    color: $site-color-8;
-    padding-left: 10px;
-    padding-right: 10px;
-    font-size: 13px;
-    font-weight: 400;
-    font-family: $fontCustom2;
-
-    &:hover,
-    &:focus,
-    &:active {
-      outline: none;
-      background: $site-color-1;
-    }
+  .custom_width {
+    max-width: 250px;
   }
 
-  .numberListCount {
+  .text {
     display: flex;
     width: auto;
     height: 36px;
     line-height: 36px;
-    margin: 0 auto 0 16px;
+    margin: 0 auto 0 8px;
     padding: 0;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 14px;
     color: $site-color-2;
     font-family: $fontCustom2;
   }
@@ -149,9 +129,9 @@
 }
 
 @media screen and (max-width: 1280px) {
-  .boxSearchWrapper {
-    .numberListCount {
-      margin: 0 0 0 8px;
+  .search_wrapper {
+    .text {
+      margin: 0 0 0 6px;
     }
 
     .box {
@@ -164,7 +144,7 @@
 }
 
 @media screen and (max-width: 960px) {
-  .boxSearchWrapper {
+  .search_wrapper {
     .box {
       .margin_btn {
         margin: 0 0 0 8px;
@@ -174,40 +154,17 @@
 }
 
 @media screen and (max-width: 768px) {
-  .boxSearchWrapper {
-    .searchInput {
-      height: 30px;
-      width: 200px;
-    }
-
-    .numberListCount {
-      height: 30px;
-      line-height: 30px;
-      font-size: 14px;
-    }
-
-    .button_mini_wrapper {
-      padding: 2px;
-
-      .button_mini_box {
-        height: 24px;
-        min-width: 24px;
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 640px) {
-  .boxSearchWrapper {
+  .search_wrapper {
     height: auto;
     flex-direction: column;
 
-    .searchInput {
-      width: 100%;
-      margin: 0 auto 8px auto;
+    .custom_width {
+      max-width: none;
     }
 
-    .numberListCount {
+    .text {
+      height: 30px;
+      line-height: 30px;
       margin: 0;
       justify-content: center;
       width: 100%;
@@ -215,13 +172,22 @@
     }
 
     .button_mini_wrapper {
+      padding: 2px;
       width: 30px;
+
+      .button_mini_box {
+        height: 24px;
+        min-width: 24px;
+      }
     }
 
     .box {
       margin: 0 auto;
     }
   }
+}
+
+@media screen and (max-width: 640px) {
 }
 
 @media screen and (max-width: 480px) {
