--- a/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
@@ -159,63 +159,6 @@
         width: 4px;
       }
 
-      .row_block_text {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        margin-top: 8px;
-
-        &:nth-child(1) {
-          margin-top: 0;
-        }
-
-        .title {
-          font-weight: 400;
-          font-size: 14px;
-          color: $site-color-2;
-          line-height: 32px;
-          height: 32px;
-          width: auto;
-          font-family: $fontCustom2;
-          padding-left: 2px;
-
-          .required {
-            top: -4px;
-            color: $site-color-10;
-            padding-left: 1px;
-            position: relative;
-          }
-        }
-
-        .count {
-          font-weight: 400;
-          font-size: 11px;
-          color: $site-color-2;
-          line-height: 32px;
-          height: 32px;
-          font-family: $fontCustom2;
-          margin-left: auto;
-
-          .number {
-            font-family: inherit;
-            font-size: inherit;
-            font-weight: inherit;
-          }
-
-          .green {
-            color: $site-color-8;
-          }
-
-          .red {
-            color: $site-color-11 !important;
-          }
-
-          .white {
-            color: $site-color-2 !important;
-          }
-        }
-      }
-
       .interface_user_add,
       .interface_tag_add {
         display: flex;
@@ -240,32 +183,15 @@
             justify-content: flex-start;
 
             .choice_form {
-              margin: 0 4px 0 0;
               width: auto;
-              height: 28px;
               min-width: 280px;
               max-width: 280px;
-              padding: 0 5px;
-              outline: none;
-              font-size: 13px;
-              font-family: $fontCustom2;
-              border: 1px solid $site-color-5;
-              border-radius: 4px;
-              color: $site-color-8;
-              background: $site-color-12;
-              transition: all 0.35s ease;
-
-              &:hover,
-              &:active,
-              &:focus {
-                outline: none;
-              }
             }
 
             .submit {
-              width: 28px;
-              min-width: 28px;
-              height: 28px;
+              width: 32px;
+              min-width: 32px;
+              height: 32px;
               border-radius: 4px;
               font-size: 16px;
               border: 1px solid $site-color-5;
@@ -273,7 +199,7 @@
               color: $site-color-2;
               transition: all 0.35s ease;
               cursor: pointer;
-              margin: 0;
+              margin: 0 0 0 6px;
               padding: 0;
 
               &:hover,
@@ -314,28 +240,6 @@
         border-radius: 4px;
         padding: 8px;
         margin-top: 8px;
-
-        .choice_text {
-          width: 100%;
-          min-width: 100%;
-          max-width: 100%;
-          height: 34px;
-          padding: 5px;
-          font-size: 13px;
-          font-family: $fontCustom2;
-          color: $site-color-8;
-          border: 1px solid $site-color-5;
-          border-radius: 3px;
-          background: $site-color-12;
-          transition: all 0.35s ease;
-          outline: none;
-
-          &:hover,
-          &:active,
-          &:focus {
-            outline: none;
-          }
-        }
       }
     }
 
@@ -515,7 +419,7 @@ body {
 @media screen and (max-width: 360px) {
 }
 
-.interface_user_add,
-.interface_tag_add {
-  display: none !important;
-}
+//.interface_user_add,
+//.interface_tag_add {
+//  display: none !important;
+//}
