--- a/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
@@ -419,7 +419,7 @@ body {
 @media screen and (max-width: 360px) {
 }
 
-//.interface_user_add,
-//.interface_tag_add {
-//  display: none !important;
-//}
+.interface_user_add,
+.interface_tag_add {
+  display: none !important;
+}
