Большой большой комит по новому парсеру ...

--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -37,6 +37,7 @@ $site-color-11: rgba(255, 0, 0, 1); // цвета
 $site-color-12: rgba(17, 17, 20, 0.5); // поле в модалке какой то
 $site-color-13: rgb(0, 0, 0); // фон модалки
 $site-color-14: rgba(28, 28, 31, 1); // $site-color-4 + $site-color-12
+$site-color-15: rgba(255, 255, 255, 0.02); // кастомный бордер для магазинов
 
 $fontCustom1: "Minecraft Title Cyrillic";
 $fontCustom2: "Minecraft Rus";
