--- a/src/modules/components/[0_grouped_0]-Manager/Shopkeepers-all-status/Shopkeepers-all-status.module.scss
+++ b/src/modules/components/[0_grouped_0]-Manager/Shopkeepers-all-status/Shopkeepers-all-status.module.scss
@@ -7,20 +7,11 @@
   height: auto;
   margin-top: 16px;
 
-  .one_users {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: auto;
-    height: auto;
-    margin-bottom: 16px;
-
-    .owner_name {
-      font-family: $fontCustom2;
-      font-weight: 400;
-      font-size: 13px;
-      color: $site-color-8;
-      text-align: center;
-    }
+  .old {
+    font-family: $fontCustom2;
+    font-weight: 400;
+    font-size: 15px;
+    color: $site-color-8;
+    text-align: center;
   }
 }
