--- a/src/modules/components/[0_grouped_0]-Profile/shops-user/ShopUser.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/shops-user/ShopUser.module.scss
@@ -70,7 +70,7 @@
       border: 1px solid $site-color-5;
       border-radius: 4px;
       margin: 8px auto;
-      padding: 8px;
+      padding: 8px 8px 8px 12px;
 
       .description_box {
         display: flex;
