--- a/src/modules/pages/shopkeepers/Shopkeepers.module.scss
+++ b/src/modules/pages/shopkeepers/Shopkeepers.module.scss
@@ -1,27 +1,5 @@
 @import "../../../Variables.scss";
 
-@keyframes animation_visible_mini {
-  0% {
-    opacity: 0;
-    height: 0;
-  }
-  100% {
-    opacity: 1;
-    height: 212px;
-  }
-}
-
-@keyframes animation_visible_full {
-  0% {
-    opacity: 0;
-    height: 0;
-  }
-  100% {
-    opacity: 1;
-    height: 342px;
-  }
-}
-
 .shopkeepers {
   width: 100%;
   height: auto;
@@ -54,7 +32,7 @@
     flex-direction: row;
     background: $site-color-4;
     border: 1px solid $site-color-5;
-    border-radius: 5px;
+    border-radius: 4px;
     padding: 8px;
 
     .list {
@@ -77,39 +55,34 @@
         border: 1px solid $site-color-5;
         border-radius: 6px;
         background: $site-color-12;
-        padding: 8px 4px;
+        padding: 4px 4px;
         overflow: auto;
 
         &::-webkit-scrollbar {
-          width: 4px !important;
+          width: 4px;
         }
 
-        .one {
-          display: flex;
-          flex-direction: row;
+        .link {
+          color: $site-color-2;
+          font-family: $fontCustom2;
+          font-size: 14px;
+          height: 28px;
+          line-height: 22px;
           width: 100%;
-          height: auto;
+          padding: 2px 8px 0 8px;
+          transition: all 0.35s ease;
+          border-radius: 4px;
+          margin: 1px 0;
 
-          .link {
-            color: $site-color-2;
-            font-family: $fontCustom2;
-            font-size: 14px;
-            height: 28px;
-            line-height: 28px;
-            width: 100%;
-            padding: 0 8px;
-            transition: all 0.35s ease;
-            border-radius: 4px;
-
-            &:hover {
-              background: $site-color-1;
-              color: $site-color-8;
-            }
+          &:hover {
+            background: $site-color-1;
+            color: $site-color-8;
+            cursor: pointer;
           }
+        }
 
-          .active {
-            color: $site-color-9 !important;
-          }
+        .active {
+          color: $site-color-9 !important;
         }
       }
 
@@ -128,35 +101,27 @@
       width: 100%;
       height: auto;
       margin: 0 auto;
-      padding: 8px 16px;
+      padding: 0 16px 8px 16px;
+      position: relative;
 
-      .single_offers {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        position: relative;
+      .reset {
+        position: absolute;
+        top: 2px;
+        right: 8px;
+        width: 48px;
+        height: 48px;
+        padding: 6px;
+        background: $site-color-14;
+        border: none;
+        border-radius: 25%;
+        cursor: pointer;
+      }
 
-        .name_fixed {
-          font-family: $fontCustom2;
-          font-weight: 400;
-          font-size: 16px;
-          text-align: center;
-          color: $site-color-2;
-          background: $site-color-4;
-          width: 100%;
-          height: 36px;
-          line-height: 36px;
-          position: sticky;
-          top: 65px;
-          z-index: 1;
-        }
-
-        .actions {
-          width: auto;
-          height: auto;
-          cursor: pointer;
-          margin: 5px auto;
-        }
+      .actions {
+        width: auto;
+        height: auto;
+        cursor: pointer;
+        margin: 0 auto 8px auto;
       }
     }
 
