--- a/src/modules/components/[0_grouped_0]-Manager/Box-view/Box-view.module.scss
+++ b/src/modules/components/[0_grouped_0]-Manager/Box-view/Box-view.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: auto;
+  width: 100%;
   max-width: 1600px;
   min-height: auto;
   max-height: 87vh;
@@ -15,9 +15,9 @@
   padding: 8px;
 
   .wrapper {
-    position: relative;
     display: flex;
     overflow: auto;
+    width: 100%;
 
     &::-webkit-scrollbar {
       width: 4px;
