--- a/src/modules/components/[0_grouped_0]-Profile/shops-user/LogTrade.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/shops-user/LogTrade.module.scss
@@ -46,7 +46,7 @@
         font-weight: 400;
         color: $site-color-2;
         text-align: center;
-        width: 400px;
+        width: 175px;
         height: auto;
         line-height: 1.5;
         margin: auto 8px auto 4px;
@@ -55,7 +55,7 @@
       .items {
         display: flex;
         flex-direction: row;
-        width: auto;
+        width: 305px;
         height: 100%;
 
         .arrow_suggestions {
@@ -70,6 +70,23 @@
           max-width: 90px;
         }
       }
+    }
+  }
+
+  .no_content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+    .text {
+      font-family: $fontCustom2;
+      font-weight: 400;
+      font-size: 18px;
+      text-align: center;
+      color: $site-color-2;
     }
   }
 }
@@ -169,4 +186,58 @@ body {
     background: $site-color-12;
     backdrop-filter: blur(12px);
   }
+}
+
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+  .log_wrapper {
+    .log_list {
+      .one_trade {
+        .items {
+          width: auto;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .log_wrapper {
+    .log_list {
+      padding-right: 0;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .log_wrapper {
+    .log_list {
+      .one_trade {
+        flex-direction: column;
+        align-items: center;
+        padding: 8px 4px;
+
+        .items {
+          margin: 6px auto;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 360px) {
 }
