--- a/src/modules/pages/shopkeepers/Shopkeepers.module.scss
+++ b/src/modules/pages/shopkeepers/Shopkeepers.module.scss
@@ -141,7 +141,7 @@
       }
     }
 
-    .shopOneSuggestions {
+    .villages_and_preview {
       display: flex;
       justify-content: flex-start;
       flex-direction: column;
