fix style +add notifications

--- a/src/modules/components/table/Table.module.scss
+++ b/src/modules/components/table/Table.module.scss
@@ -8,7 +8,7 @@ $table-parameter: 34;
   max-width: 100%;
   border: 1px solid $site-color-5;
   background: $site-color-12;
-  margin: 8px auto 0 auto;
+  margin: 8px auto 8px auto;
 }
 
 .tableThead {
