--- a/src/modules/components/[0_grouped_0]-Manager/Shopkeepers-all-status/Shopkeepers-all-status.module.scss
+++ b/src/modules/components/[0_grouped_0]-Manager/Shopkeepers-all-status/Shopkeepers-all-status.module.scss
@@ -5,13 +5,13 @@
   flex-direction: column;
   width: auto;
   height: auto;
-  margin-top: 16px;
 
-  .old {
+  .text {
     font-family: $fontCustom2;
     font-weight: 400;
     font-size: 15px;
     color: $site-color-8;
     text-align: center;
+    margin: 8px 0;
   }
 }
