--- a/src/modules/components/[0_grouped_0]-Profile/shops-user/LogTrade.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/shops-user/LogTrade.module.scss
@@ -89,6 +89,15 @@
       color: $site-color-2;
     }
   }
+
+  .no_content,
+  .log_list {
+    margin-bottom: 8px;
+  }
+
+  .pos {
+    flex: 1;
+  }
 }
 
 body {
@@ -191,8 +200,17 @@ body {
 
 @media screen and (max-width: 960px) {
   .log_wrapper {
+    .pos:nth-child(2) {
+      order: 1;
+    }
+
     .log_list {
       padding-right: 0;
+    }
+
+    .no_content,
+    .log_list {
+      margin-bottom: 0;
     }
   }
 }
