--- a/src/modules/components/back-button/BackButton.module.scss
+++ b/src/modules/components/back-button/BackButton.module.scss
@@ -5,7 +5,8 @@
   border: none;
   border-radius: 0;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 13px;
+  font-family: $fontCustom2;
   text-align: center;
   color: $site-color-2;
   margin-top: 4px;
