--- a/src/modules/components/[0_grouped_0]-Manager/Box-view/Box-view.module.scss
+++ b/src/modules/components/[0_grouped_0]-Manager/Box-view/Box-view.module.scss
@@ -8,16 +8,12 @@
   max-width: 1600px;
   min-height: auto;
   max-height: 87vh;
-  margin: 0 auto 16px auto;
-  background: $site-color-4;
-  border-radius: 8px;
-  border: 1px solid $site-color-5;
-  padding: 8px;
+  margin: 0 auto;
 
   .wrapper {
     display: flex;
-    overflow: auto;
     width: 100%;
+    height: auto;
 
     &::-webkit-scrollbar {
       width: 4px;
