--- a/src/modules/components/[0_grouped_0]-Manager/Player-summary/Player-summary.module.scss
+++ b/src/modules/components/[0_grouped_0]-Manager/Player-summary/Player-summary.module.scss
@@ -166,7 +166,7 @@ body {
     .stroke {
       color: $site-color-2;
       line-height: 1.5;
-      height: 24px;
+      min-height: 24px;
       font-weight: 400;
       font-size: 14px;
 
