--- a/src/common/confirm-modal/ConfirmModal.module.scss
+++ b/src/common/confirm-modal/ConfirmModal.module.scss
@@ -1,76 +1,35 @@
 @import "../../Variables";
 
-@keyframes show {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
+.confirm {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  position: relative;
+  width: 450px;
+  height: 150px;
 
-body {
-  .modal_main_box {
-    position: absolute;
-    z-index: 10098;
-    width: 450px;
-    height: 150px;
-    overflow: auto;
-    outline: none;
-    box-shadow: 4px 4px 10px 0 rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: 4px 4px 10px 0 rgba(0, 0, 0, 0.3);
-    -moz-box-shadow: 4px 4px 10px 0 rgba(0, 0, 0, 0.3);
-    background: $site-color-4;
-    border-radius: 8px;
-    animation: 0.4s ease show;
-
-    .window {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      position: relative;
-      width: 100%;
-      height: 100%;
-
-      .text {
-        width: 100%;
-        height: 32px;
-        line-height: 32px;
-        font-size: 18px;
-        font-family: $fontCustom2;
-        color: $site-color-2;
-        text-align: center;
-      }
-
-      .actions {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        width: 100%;
-        height: auto;
-      }
-
-      .timeline {
-        height: 3px;
-        display: flex;
-        position: absolute;
-        bottom: 0;
-      }
-    }
+  .text {
+    width: 100%;
+    height: 32px;
+    line-height: 32px;
+    font-size: 18px;
+    font-family: $fontCustom2;
+    color: $site-color-2;
+    text-align: center;
   }
 
-  .overlay_modal_full {
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    position: fixed;
+  .actions {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    z-index: 10099;
-    background: $site-color-12;
-    backdrop-filter: blur(12px);
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    height: auto;
+  }
+
+  .timeline {
+    height: 3px;
+    display: flex;
+    position: absolute;
+    bottom: 0;
   }
 }
