--- a/src/modules/components/[0_grouped_0]-Profile/shops-user/LogTrade.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/shops-user/LogTrade.module.scss
@@ -101,7 +101,7 @@
 }
 
 .shulker_wrapper {
-  padding: 24px;
+  padding: 16px;
 }
 
 @media screen and (max-width: 1600px) {
@@ -155,6 +155,10 @@
         }
       }
     }
+  }
+
+  .shulker_wrapper {
+    padding: 12px;
   }
 }
 
