fix position close modal button

--- a/src/common/modal/MyModal.module.scss
+++ b/src/common/modal/MyModal.module.scss
@@ -35,8 +35,8 @@ body {
 
       .modal_close {
         position: absolute;
-        right: -48px;
-        top: 0;
+        right: 0;
+        top: -48px;
         width: 38px;
         height: 38px;
         padding: 4px;
